# ITA_CSL_API

./: .env.example  .gitignore  README.md  names.txt  setup.cfg
src/searcher/: get_data.py
src/searcher/lib/: format_record.py  io.py  searcher.py
