[metadata]
name = searcher
version = 0.0.1
author = Andrew Candela
author_email = andrewpcandela@gmail.com
description = Getting some data from the ITA API
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
